src/main/kotlin/com/team1/mvp_test/common/error/EnterpriseErrorMessage.kt
package com.team1.mvp_test.common.error

enum class EnterpriseErrorMessage(val message: String) {
    ALREADY_EXISTS("이미 존재하는 기업입니다."),
    NOT_AUTHORIZED("테스트 작성자가 아닙니다.")
}